"Spring and Maven config"